--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"dependencies": {
 		"autoprefixer": "10.4.14",
-		"next": "13.4.9",
+		"next": "^13.4.9",
 		"postcss": "8.4.25",
 		"react": "18.2.0",
 		"react-copy-to-clipboard": "^5.1.0",
